--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
   <color name="colorPrimaryDark">#FFC107</color>
   <color name="colorAccent">#FFC107</color>
   <color name="black_overlay">#66000000</color>
+  <color name="white">#ffffff</color>
 </resources>
